--- a/css/jscli.css
+++ b/css/jscli.css
@@ -1,29 +1,36 @@
-/* line 4, ../sass/jscli.sass */
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
+/* line 8, ../sass/jscli.sass */
 .jscli {
   background: transparent;
   color: white;
   border: none;
-  font-family: monospace;
+  font-family: "Droid Sans Mono", monospace;
   font-size: 14px;
+  line-height: 18px;
   display: block;
   width: 100%;
   box-sizing: border-box;
   overflow-y: auto;
   white-space: pre-wrap;
-  max-height: 86px;
+  max-height: 121px;
   margin: 0;
 }
+/* line 22, ../sass/jscli.sass */
+.jscli#input {
+  height: 19px;
+  outline: none;
+}
 
-/* line 18, ../sass/jscli.sass */
+/* line 26, ../sass/jscli.sass */
 .jscli-wrap {
   background: rgba(0, 0, 0, 0.85);
   padding: 5px;
   border-radius: 5px;
-  width: 600px;
+  width: 590px;
   margin: 0 auto 0;
 }
 
-/* line 25, ../sass/jscli.sass */
+/* line 33, ../sass/jscli.sass */
 .jscli-container {
   position: fixed;
   bottom: 10px;
