--- a/sass/jscli.sass
+++ b/sass/jscli.sass
@@ -28,6 +28,8 @@ $font-size: 14px
   padding: $pad
   border-radius: 5px
   width: $width - 2 * $pad
+  max-width: 100%
+  box-sizing: border-box
   margin: 0 auto 0
 
 .jscli-container
@@ -36,4 +38,3 @@ $font-size: 14px
   width: 100%
   left: 0
   right: 0
-
